--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,11 +43,11 @@ jobs:
       with:
         projectBaseDir:
         args: >
-          -Dsonar.organizat=my-org
-          -Dsonar.projectKey=my-java-web-app
+          -Dsonar.organizat=com.example
+          -Dsonar.projectKey=cicd
       env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # name: Update dependency graph
