--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,14 +21,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn clean install
+    - name: Build with Maven and SonarQube Scan
+      run: mvn clean install org.sonarsource.scanner.maven:sonar \
+          -Dsonar.projectKey=cicd \
+          -Dsonar.organization=com.example \
+          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
@@ -38,16 +44,18 @@ jobs:
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: SonarQube Scan
-      uses: SonarSource/sonarqube-scan-action@v1 # Ex: v4.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
-      with:
-        projectBaseDir:
-        args: >
-          -Dsonar.organizat=com.example
-          -Dsonar.projectKey=cicd
-      env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    - name: Nettoyer les fichiers temporaires
+      run: rm -rf /home/runner/work/_temp/*
+#    - name: SonarQube Scan
+#      uses: SonarSource/sonarqube-scan-action@v1 # Ex: v4.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+#      with:
+#        projectBaseDir:
+#        args: >
+#          -Dsonar.organizat=com.example
+#          -Dsonar.projectKey=cicd
+#      env:
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       #run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
