--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,12 +33,11 @@ jobs:
       run: rm -rf /home/runner/.m2/repository/org/sonarsource/scanner/maven
 
     - name: Build with Maven and SonarQube Scan
-      run: mvn clean install org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
+      run: mvn clean install sonar:sonar \
           -Dsonar.projectKey=cicd \
           -Dsonar.organization=com.example \
-      env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
