--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>3.3.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>4.0.0.4121</version>
+			</plugin>
 		</plugins>
 		<finalName>springboot-images-new</finalName>
 	</build>
