--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,19 +32,8 @@ jobs:
     - name: Nettoyer le cache Maven
       run: rm -rf /home/runner/.m2/repository/org/sonarsource/scanner/maven
 
-    - name: SonarQube Scan
-      with:
-        projectBaseDir:
-        args: >
-          -Dsonar.organizat=com.example
-          -Dsonar.projectKey=cicd
-      env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-
-#    - name: Build with Maven and SonarQube Scan
-#      run: mvn clean install sonar:sonar \
+    - name: Build with Maven and SonarQube Scan
+      run: mvn clean install sonar:sonar
 #          -Dsonar.projectKey=cicd \
 #          -Dsonar.organization=com.example \
 #          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
@@ -60,16 +49,16 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Nettoyer les fichiers temporaires
       run: rm -rf /home/runner/work/_temp/*
-#    - name: SonarQube Scan
-#      uses: SonarSource/sonarqube-scan-action@v1 # Ex: v4.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
-#      with:
-#        projectBaseDir:
-#        args: >
-#          -Dsonar.organizat=com.example
-#          -Dsonar.projectKey=cicd
-#      env:
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    - name: SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v1 # Ex: v4.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+      with:
+        projectBaseDir:
+        args: >
+          -Dsonar.organizat=com.example
+          -Dsonar.projectKey=cicd
+      env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       #run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
