--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,9 +56,11 @@ jobs:
         args: >
             -Dsonar.organizat=com.example
             -Dsonar.projectKey=cicd
-      env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.host.url=https://bd8e-41-82-27-17.ngrok-free.app
+            -Dsonar.login=YOUR_SONAR_TOKEN
+#      env:
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       #run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
