--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,6 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
 name: projet cicd flow
 
 on:
@@ -16,48 +15,54 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        persist-credentials: false
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Nettoyer le cache Maven
-      run: rm -rf /home/runner/.m2/repository/org/sonarsource/scanner/maven
-    - name: SonarQube Scan
-      uses: SonarSource/sonarqube-scan-action@v1 # Ex: v4.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
-      with:
-        projectBaseDir:
-        args: >
-          -Dsonar.organizat=com.example
-          -Dsonar.projectKey=cicd
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    - name: Build with Maven and SonarQube Scan
-      run: mvn clean install org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar
-#          -Dsonar.projectKey=cicd \
-#          -Dsonar.organization=com.example \
-#          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-#          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-    - name: Build & push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v6
-      with:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Nettoyer le cache Maven pour SonarQube
+        run: rm -rf /home/runner/.m2/repository/org/sonarsource/scanner/maven
+
+      - name: SonarQube Scan (Action officielle)
+        uses: SonarSource/sonarqube-scan-action@v1
+        with:
+          projectBaseDir: .
+          args: >
+            -Dsonar.organization=com.example
+            -Dsonar.projectKey=cicd
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+      - name: Build with Maven and SonarQube Scan
+        run: mvn clean install org.sonarsource.scanner.maven:sonar-maven-plugin:4.0.0.4121:sonar \
+          -Dsonar.projectKey=cicd \
+          -Dsonar.organization=com.example \
+          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
           image: abdou008/springboot-images-new
           tags: V1, latest
           registry: docker.io
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Nettoyer les fichiers temporaires
-      run: rm -rf /home/runner/work/_temp/*
+
+      - name: Nettoyer les fichiers temporaires
+        run: rm -rf /home/runner/work/_temp/*
+
 
       #run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
