--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=cicd
+server.port=8080
+
+management.endpoints.web.base-path=/management
+management.endpoints.web.exposure.include=*
+
+spring.jmx.enabled=true
+management.endpoints.jmx.exposure.include=*
+management.endpoint.health.show-details=always
+
+spring.boot.admin.client.url=http://localhost:8080
